bug fix for send routine patch

--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -785,7 +785,8 @@ export EDITOR=vim
 
      if file_present $inputfile
       then
-         cmdoutput=`ffsend upload $inputfile -f --downloads 1 -y -P >> /tmp/.ffsend_log.txt`         
+         #cmdoutput=`ffsend upload $inputfile -f --downloads 1 -y -P >> /tmp/.ffsend_log.txt`         
+         cmdoutput=`ffsend upload $inputfile -f --downloads 1 -y -P`
          uploaded_fileurl=$(echo $cmdoutput | awk '{print $3}')
          uploaded_file_passphrase=$(echo $cmdoutput | cut -d ' ' -f 5-50)
 
