--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -822,6 +822,7 @@ export EDITOR=vim
     ffsend_set_stash_grab_params
     _tmp_ffsend_grab_url="$(curl $keyvalue_wwwservice/$keyvalue_bucket_id/$keyvalue_urlholder_key)"
     ffsend download $_tmp_ffsend_grab_url -p "$(curl $keyvalue_wwwservice/$keyvalue_bucket_id/$keyvalue_phraseholder_key)" -y >> /tmp/.ffsend_log.txt
+    printf "\n"
    }
 
 
