--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -867,7 +867,7 @@ export EDITOR=vim
      do
        itr="$i"
        gstash="gst$itr"
-       grab="g$itr"       
+       grab="grab$itr"       
        tag="tmp$itr"
        aliasstr="alias '$gstash=ffsend_stash_the_file_for_itr $tag'"
        dbg_print $aliasstr
