--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -634,6 +634,8 @@ export EDITOR=vim
      #alias myssh='ssh -C -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no'
      alias myssh='ssh -C -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -o LogLevel=ERROR'
      alias mysshtout='timeout 4 ssh -C -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -o LogLevel=ERROR'
+     alias dlmp3music='youtube-dl  --audio-quality 0 --prefer-ffmpeg --extract-audio --audio-format mp3 --audio-quality 320k'
+     alias dlmp4="youtube-dl -f 'bestvideo[ext=mp4]+bestaudio[ext=m4a]/bestvideo+bestaudio' --merge-output-format mp4"
     
      #alias reloadenv='curl -s termbin.com/n2bc | bash'
      alias reloadenv='source /dev/stdin <<< "$(curl -s -L bit.ly/sh213)"'
