--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -671,12 +671,12 @@ export EDITOR=vim
     termbinurl=$(printf "$localParam" | nc termbin.com 9999)
     termbintoken=$(printf $termbinurl | awk -F/ '{print $4}')
     dbg_print "\n termbinurl=$termbinurl \n termbintoken=$termbintoken"
-    curl -s -X POST https://api.keyvalue.xyz/$keyvaluebucket/$onlineclipboardname/$termbintoken;
+    curl -s -X PUT https://test-consul.dir.block51.net/v1/kv/$keyvaluebucket --data "$termbintoken"
    }
 
    function saveclip9() {
     onlineclipboardname="clip9"
-    keyvaluebucket="a796f459"
+    keyvaluebucket="6bGi6UncEf6L"
     declare localParam=${*:-$(</dev/stdin)};
     dbg_print "input parameters are: \n $localParam \n"
     termbinurl=$(printf "$localParam" | nc termbin.com 9999)
@@ -689,7 +689,7 @@ export EDITOR=vim
 
    function c9() {
     onlineclipboardname="clip9"
-    keyvaluebucket="a796f459"
+    keyvaluebucket="6bGi6UncEf6L"
     clipboardtoken=$(curl -s https://test-consul.dir.block51.net/v1/kv/$keyvaluebucket | sed 's/[][]//g' | python3 -c "import sys, json; print(json.load(sys.stdin)['Value'])" | base64 -d)
     clipboardcontent=$(curl -s termbin.com/$clipboardtoken)    
     printf "$clipboardcontent\n"
@@ -700,7 +700,7 @@ export EDITOR=vim
    function c1() {
     onlineclipboardname="clip1"
     keyvaluebucket="a796f459"
-    clipboardtoken=$(curl -s https://api.keyvalue.xyz/$keyvaluebucket/$onlineclipboardname)
+    clipboardtoken=$(curl -s https://test-consul.dir.block51.net/v1/kv/$keyvaluebucket | sed 's/[][]//g' | python3 -c "import sys, json; print(json.load(sys.stdin)['Value'])" | base64 -d)
     clipboardcontent=$(curl -s termbin.com/$clipboardtoken)    
     printf "$clipboardcontent\n"
    }
@@ -714,14 +714,14 @@ export EDITOR=vim
     termbinurl=$(printf "$localParam" | nc termbin.com 9999)
     termbintoken=$(printf $termbinurl | awk -F/ '{print $4}')
     dbg_print "\n termbinurl=$termbinurl \n termbintoken=$termbintoken"
-    curl -s -X POST https://api.keyvalue.xyz/$keyvaluebucket/$onlineclipboardname/$termbintoken;
+    curl -s -X PUT https://test-consul.dir.block51.net/v1/kv/$keyvaluebucket --data "$termbintoken"
    }
    
    ## using the termbin service and keyvalue.xyz cloud service
    function c2() {
     onlineclipboardname="clip2"
     keyvaluebucket="02fbc09c"
-    clipboardtoken=$(curl -s https://api.keyvalue.xyz/$keyvaluebucket/$onlineclipboardname)
+    clipboardtoken=$(curl -s https://test-consul.dir.block51.net/v1/kv/$keyvaluebucket | sed 's/[][]//g' | python3 -c "import sys, json; print(json.load(sys.stdin)['Value'])" | base64 -d)
     clipboardcontent=$(curl -s termbin.com/$clipboardtoken)
     printf "$clipboardcontent\n"
    }
