--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -1022,7 +1022,7 @@ export EDITOR=vim
     curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar;
     chmod +x wp-cli.phar;
     sudo mv wp-cli.phar /usr/local/bin/wp;
-
+    wp --info;
    }
 
 ## ==========
