--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -1035,7 +1035,9 @@ export EDITOR=vim
      
    }
 
-
+   function install_docker_compose() {
+    sudo curl -L "https://github.com/docker/compose/releases/download/v2.7.0/docker-compose-linux-x86_64" -o /usr/local/bin/docker-compose; sudo chmod +x /usr/local/bin/docker-compose;
+   }
 
 
 ## ==========
