--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -1066,6 +1066,15 @@ export EDITOR=vim
     find . -type d -exec chmod 755 {} \;
    }
 
+   function report_prep_answerpub_csv_csvlook() {
+    csvgrep -c 1 -i -m "Alphabeticals" *suggestions* -K 1  | csvcut -c 1-6 -l | sed -e 's/line_number/No./g' | csvlook;
+   }
+
+   function report_prep_answerpub_csv() {
+    ## csvgrep -c 1 -i -m "Alphabeticals" *suggestions* -K 1  | csvcut -c 1-6 -l | sed -e 's/line_number/No./g' | csvlook
+
+   }
+
 
 
 
