--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -1072,7 +1072,10 @@ export EDITOR=vim
 
 
    function report_prep_answerpub_csv() {
-     csvgrep -c 1 -i -m "Alphabeticals" *suggestions* -K 1  | csvcut -c 1-6 -l | sed -e 's/line_number/No./g' > 3-related-content-ideas.csv;
+     relatedcontentfile="3-related-content-ideas.csv";
+     #csvgrep -c 1 -i -m "Alphabeticals" *suggestions* -K 1  | csvcut -c 1-6 -l | sed -e 's/line_number/No./g' > 3-related-content-ideas.csv;
+     csvgrep -c 1 -i -m "Alphabeticals" *suggestions* -K 1  | csvcut -c 1-6 -l | sed -e 's/line_number/No./g' > $relatedcontentfile;
+     csvlook $relatedcontentfile;
    }
 
 
