--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -36,6 +36,9 @@ export EDITOR=vim
 
 
 
+
+
+
 #local section
   alias s='source ~/$myshellrcfilename'
 
@@ -659,7 +662,7 @@ export EDITOR=vim
      alias dnsselfip='dns_selfregister_ip_with_digi'
      alias gssh-user='goto_ssh_connect_to_vms_with_customuserid'
      alias gssh-runcloud='goto_ssh_connect_to_vms_with_runcloud'
-     
+     reportgen_set_target_vars
    }
    # entry point for respective platforms.
    set_os_specific_conf() {
@@ -1066,6 +1069,10 @@ export EDITOR=vim
     find . -type d -exec chmod 755 {} \;
    }
 
+   function reportgen_set_target_vars() {
+    targetdir_csvforpdf="targetdir-with-csv-for-pdf";
+   }
+
    function report_prep_answerpub_csv_csvlook() {
     csvgrep -c 1 -i -m "Alphabeticals" *suggestions* -K 1  | csvcut -c 1-6 -l | sed -e 's/line_number/No./g' | csvlook;
    }
@@ -1073,9 +1080,22 @@ export EDITOR=vim
 
    function report_prep_answerpub_csv() {
      relatedcontentfile="3-related-content-ideas.csv";
+     report_set_target_vars;
      #csvgrep -c 1 -i -m "Alphabeticals" *suggestions* -K 1  | csvcut -c 1-6 -l | sed -e 's/line_number/No./g' > 3-related-content-ideas.csv;
-     csvgrep -c 1 -i -m "Alphabeticals" *suggestions* -K 1  | csvcut -c 1-6 -l | sed -e 's/line_number/No./g' > $relatedcontentfile;
+     csvgrep -c 1 -i -m "Alphabeticals" *suggestions* -K 1  | csvcut -c 1-6 -l | sed -e 's/line_number/No./g' > $targetdir_csvforpdf/$relatedcontentfile;
      csvlook $relatedcontentfile;
+   }
+
+   function report_prep_corecontent_csv() {
+     dirforprep="csvfilesforprep";
+     
+     srcfile03relatedquestions="03-Related-Questions.csv"
+     targetfile_relatedquestions="2-related-questions.csv"
+     unzip -q -n -d $dirforprep *.zip;
+
+
+     csvcut $dirforprep/$srcfile03relatedquestions -l | sed -e 's/line_number/No./g' > $targetdir_csvforpdf/$targetfile_relatedquestions;
+
    }
 
 
