--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -1081,6 +1081,7 @@ export EDITOR=vim
    function report_prep_answerpub_csv() {
      relatedcontentfile="3-related-content-ideas.csv";
      report_set_target_vars;
+     mkdir -p $targetdir_csvforpdf;
      #csvgrep -c 1 -i -m "Alphabeticals" *suggestions* -K 1  | csvcut -c 1-6 -l | sed -e 's/line_number/No./g' > 3-related-content-ideas.csv;
      csvgrep -c 1 -i -m "Alphabeticals" *suggestions* -K 1  | csvcut -c 1-6 -l | sed -e 's/line_number/No./g' > $targetdir_csvforpdf/$relatedcontentfile;
      csvlook $relatedcontentfile;
@@ -1091,8 +1092,9 @@ export EDITOR=vim
      
      srcfile03relatedquestions="03-Related-Questions.csv"
      targetfile_relatedquestions="2-related-questions.csv"
-     unzip -q -n -d $dirforprep *.zip;
 
+     mkdir -p $targetdir_csvforpdf;
+     unzip -q -n -d $dirforprep *.zip;
 
      csvcut $dirforprep/$srcfile03relatedquestions -l | sed -e 's/line_number/No./g' > $targetdir_csvforpdf/$targetfile_relatedquestions;
 
