--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -1119,6 +1119,7 @@ export EDITOR=vim
       $dirforprep/$srcfile01competitoranalysis | sed 1d | csvcut -c 8 | awk -F/ '{print $3}'`; \
       csvcut -c $i -x $dirforprep/$srcfile02competitorcontentoutline -l \
       | sed -e 's/line_number/No./g' -e "s/COMPETITOR/ COMPETITOR     -------   $name   ------- /g" \
+        -e "s/Checking if the site connection is secure/Content Not Available/g"  \
        >> $targetdir_csvforpdf/$targetfile_competitorcontentoutline; \
         printf "\n, \n\n, \n" >> $targetdir_csvforpdf/$targetfile_competitorcontentoutline; done;
 
